Working in overleaf

--- a/sections/01_abstract.tex
+++ b/sections/01_abstract.tex
@@ -1,8 +1,5 @@
 \addcontentsline{toc}{section}{Abstract}
 \section*{Abstract} % Nick
 % • Brief summary of the project proposal (max 200 words)
-Load-balancing, as applied to the web application context, seems to have yet to be revolutionised by parallel developments in software-defined networking (SDN), with most load-balancing still occurring on dedicated hardware or dedicated software on generic hardware \cite{market_share}. \\
-
-This proposal explores the relevant background required to understand these two complementary technologies and how they could potentially be combined to make more efficient use of resources by implementing load-balancing at the network level, using the Open Network Operating System (ONOS) SDN controller \cite{onos_repo}. This proposed load-balancer would be able take advantage of various load-balancing algorithms in a modular fashion. Once implemented, this load-balancer will be tested against different traffic profiles to determine which algorithms best suit each profile. \\
-
-Work has already begun to achieve these goals, including the development of test network infrastructure, a sample web application, selection of load-balancing algorithms, and the identification of relevant ONOS APIs required for the development of a load-balancing controller application.
+\todo{Add content here}
+Example citation \cite{Ghomi}.
