--- a/sections/05_project_aim.tex
+++ b/sections/05_project_aim.tex
@@ -1,108 +1,3 @@
 \section{Project Aim} \label{sec:aim}
 % Here you should explain the goal of the project in more technical detail. You should identify different project tasks or milestones.
-\subsection{Project Goal}
-The overall goal of this project is to produce an ONOS application with the ability to balance web application traffic load on a network controlled by ONOS using any one of a number of load balancing algorithms (ideally interchangeable at run-time). This would take the place of dedicated load balancing infrastructure in virtual private cloud (VPC).
-
-\subsection{Project Milestones}
-% Limit description here to only the goal, leave implementation for the methodology section.
-
-\subsubsection{M0: Load Balancing Algorithm Selection} \label{lba}
-One of the subgoals of the project is for the load balancer to support multiple different load balancing algorithms based around different strategies for distributing load. However, because of the limitations of the environment in which it will operate, not all algorithms may be feasible to implement. For example, different load-balancing algorithms rely on different types (and depths) of information which may be hard or impossible to obtain in the context of an ONOS provider. Others may not lend themselves to implementation in terms of a southbound interface like OpenFlow rules. As a result, some preliminary research will be required to identify suitable candidate algorithms. An initial target of four algorithms, representative of the scope of those available (and suitable), will be targeted. Ideally these should also vary in complexity and sophistication. \\
-
-\textbf{Acceptance Criteria:}
-\begin{itemize}
-    \item Four (or more) algorithms have been identified for implementation and are unlikely to be incompatible with implementation in an ONOS context.
-\end{itemize}
-
-\subsubsection{M1: Initial ONOS Load-Balancing Service}
-In order to to facilitate load-balancing in the context of the ONOS controller, the relevant APIs made available by ONOS will need to be identified and harnessed to provide a skeleton application capable of taking directives from an arbitrary load balancing algorithm as well as sourcing and making available the superset of the contextual information required by the more sophisticated algorithms. For now, a token implementation that (for example) forwards requests at random would be sufficient. \\
-
-\textbf{Acceptance Criteria:}
-\begin{itemize}
-    \item A skeleton ONOS provider application has been written and runs without issue in the ONOS controller.
-\end{itemize}
-
-\subsubsection{M2: First Example Load-Balancing Algorithm}
-Once the core ONOS application has been implemented, the nominal balancing logic should be replaced with one of the (simplest) algorithms identified in section \ref{lba}. Once the algorithm is implemented in Java the algorithm can be hard-coded (for now) into the service, to be abstracted out at a later point. \\
-
-\textbf{Acceptance Criteria:}
-\begin{itemize}
-    \item One load-balancing algorithm has been implemented in Java.
-    \item The load-balancing algorithm has been integrated into the service.
-\end{itemize}
-
-\subsubsection{M3: Sample Client Construction}
-The premise of our solution is operation in a distributed web application context so we need at least a token web application to run on our distributed worker nodes to accept and process requests. This application server should ideally be configurable to allow us to vary factors like processing time and supported backlog size, amongst others. \\
-
-\textbf{Acceptance Criteria:}
-\begin{itemize}
-    \item The code for a working client server has been committed to the project repository.
-    \item The client server allows for run-time configuration of request processing time.
-    \item The client server is readily portable as a single binary.
-\end{itemize}
-
-\subsubsection{M4: Network Infrastructure Setup}
-In order to properly test the load balancer under production-like conditions it will be necessary to set up a test network. Thankfully, Mininet makes this efficient, straightforward and repeatable. This network will host a number of elements including the application client (worker) instances, \\
-
-\textbf{Acceptance Criteria:}
-\begin{itemize}
-    \item Network infrastructure has been defined using the Mininet Python API and tested for suitability.
-    \item Infrastructure as Code artefacts have been committed to the project repository.
-\end{itemize}
-
-\subsubsection{M5: Simulated Traffic}
-Even with most of the infrastructure already in place some way of simulating user traffic is still required. This solution should be highly configurable and capable of simulating high traffic load. Simulating this kind of traffic is relatively straightforward using open source tools like k6 or Locust that spin up ``virtual users'' and forward arbitrary requests to a specified HTTP endpoint. Either of these tools should be more than sufficient for this use case. \\
-
-\textbf{Acceptance Criteria:}
-\begin{itemize}
-    \item Various simulated traffic profiles have been developed and tested.
-    \item Configuration artefacts have been included in the project repository.
-\end{itemize}
-
-\subsubsection{M6: Initial Testing} \label{test0}
-With all of the infrastructure in place and a load-balancing algorithm integrated into the ONOS provider application it should now be possible to conduct the first round of testing. By testing with a variety of configurations the performance of the single integrated algorithm under various levels of strain. This initial testing will inform the configurations used in later rounds. \\
-
-\textbf{Acceptance Criteria:}
-\begin{itemize}
-    \item A logical (initial) set of configurations and testing process has been arrived at (by trial and error).
-    \item Initial results have been recorded in a spreadsheet.
-    \item An understanding has been reached of the performance behaviour of the first algorithm.
-\end{itemize}
-
-\subsubsection{M8: Subsequent Load-Balancing Algorithm Implementations}
-With the proof-of-concept algorithm successfully tested it now becomes important to abstract out the algorithm integration process by providing a standard interface based on the commonalities between the identified algorithms as well as any insight gained into other algorithms. \\
-
-\textbf{Acceptance Criteria:}
-\begin{itemize}
-    \item A standard interface for load-balancing algorithms has been developed.
-    \item All candidate algorithms have been implemented to conform to the standard interface.
-    \item The provider application has been modified to support the standard interface.
-\end{itemize}
-
-\subsubsection{M9: Comprehensive Testing \& Results Collection}
-The testing process arrived at in Section \ref{test0} should be applied to all candidate algorithms, including all traffic profiles. \\
-
-\textbf{Acceptance Criteria:}
-\begin{itemize}
-    \item Results for all candidate algorithms under all traffic profiles have been added to the results spreadsheet.
-\end{itemize}
-
-\subsubsection{M10: Results Analysis}
-Once all results have been collected they should be analysed to determine whether there are any noticeable or interesting patterns. In particular it should be noted whether particular candidate algorithms perform consistently better or worse under different traffic patterns and how that compares with findings in existing literature. \\
-
-\textbf{Acceptance Criteria:}
-\begin{itemize}
-    \item Results for all algorithm-traffic-pattern combinations have been analysed.
-    \item Algorithms have been ranked on a per-traffic-pattern and overall basis.
-\end{itemize}
-
-\subsubsection{M11: ONOS GUI Visualisation}
-ONOS provides a GUI feature that, among other uses, allows for the visualisation of network topologies under management by ONOS. We propose exposing the new features described in the above goals to users through additional GUI elements indicating information associated with each worker like the request backlog associated with each client.
-
-This represents a "stretch" goal of the project and will only be attempted if and when all other goals listed here have been accomplished. \\
-
-\textbf{Acceptance Criteria:}
-\begin{itemize}
-    \item The client has been modified to provide the required information.
-    \item The controller UI has been modified to include relevant load-balancing information.
-\end{itemize}
+\todo{Add content here}
