--- a/sections/07_project_plan.tex
+++ b/sections/07_project_plan.tex
@@ -2,13 +2,5 @@
 \thispagestyle{empty}
 \section{Project Plan} \label{sec:plan}
 % You should provide at project plan with key milestones and a timeline. This can be a simple table, or a Gantt chart.
-
-% Nick: add milestone numbers
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=25cm]{project/proposal/img/gantt.jpg}
-    \caption{Project Timeline}
-    \label{fig:gantt}
-\end{figure}
+\todo{Add content here}
 \end{landscape}
