--- a/sections/00_cover.tex
+++ b/sections/00_cover.tex
@@ -1,7 +1,7 @@
 \begin{titlepage}
 \newgeometry{top=5cm,left=2.5cm,right=2.5cm}
 \center
-\includegraphics[scale=0.4]{project/proposal/img/uq-logo.jpg} \\[1.5cm]
+\includegraphics[scale=0.4]{img/uq-logo.jpg} \\[1.5cm]
 \HRule \\[0.4cm]
 { \Huge \bfseries \coursecode \\ Computer Networks II \ \\[0.25cm] 
 \huge Project Proposal - Modular Load Balancer} \\[0.4cm]
